--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: php
 
 php:
+  - 5.5.9
   - 5.6
   - 7.0
+  - hhvm
 
 env:
   APP_ENV: testing
@@ -13,10 +15,11 @@ env:
 
 branches:
   only:
-    - master
+    - travis
 
 before_script:
-  - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install
+  - composer self-update
+  - composer install --prefer-source --no-interaction --dev
 
-script: phpunit
+script: 
+  - vendor/bin/phpunit
